--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
 APP_NAME=ChatApp
 APP_ENV=local
-APP_KEY=base64:OUVnzMb/Wspv2zkiaJQb0/EnRie4GyiqIwx9DRC6RPg=
+APP_KEY=base64:LJc720TJ0lE/ZF5vAd+Eo9ywvlfRFuOfsdLqqH9HosI=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost:8000
+
 APP_FRONTEND_URL=http://localhost:3000
 SANCTUM_STATEFUL_DOMAINS=localhost:3000
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
@@ -20,12 +22,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=ChatApp
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=ChatApp
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
