--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,10 @@ APP_ENV=local
 APP_KEY=base64:OUVnzMb/Wspv2zkiaJQb0/EnRie4GyiqIwx9DRC6RPg=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+
+APP_FRONTEND_URL=http://localhost:3000
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,7 +25,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+# DB_DATABASE=ChatApp
 # DB_USERNAME=root
 # DB_PASSWORD=
 
